# phantom

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  std.md  todo.md
arch/x86_64/: prt0.s
examples/: basic.ph  basic.pt
include/: Areas.hpp  Driver.hpp  Lexer.hpp  Logger.hpp  Options.hpp  Parser.hpp  Token.hpp  common.hpp  global.hpp  info.hpp
include/Data/: ExpressionInfo.hpp  Variable.hpp
include/LLVMCodeGen/: Compiler.hpp  ExpressionInfo.hpp  Operation.hpp  Visitor.hpp
include/LLVMVisitor/: Visitor.hpp
include/Lexer/: Lexer.hpp  Token.hpp
include/Parser/: Expressions.hpp  Parser.hpp  Statements.hpp
include/ast/: Elm.hpp  Expr.hpp  Expression.hpp  Parser.hpp  Statement.hpp  Stmt.hpp
include/codegen/: Codegen.hpp  Operation.hpp  Visitor.hpp
include/driver/: Driver.hpp  Options.hpp
include/irgen/: Gen.hpp  Instruction.hpp  Program.hpp  Value.hpp  data.hpp
include/lexer/: lexer.hpp  location.hpp  token.hpp
include/llvm_codegen/: Compiler.hpp  Help.hpp  Operation.hpp  Visitor.hpp
include/parser/: expression.hpp  parser.hpp  statement.hpp
include/utils/: NumUtils.hpp  StrUtils.hpp  num.hpp  str.hpp  vec.hpp
old/: Operation.hpp  Parser.cpp  Visitor.hpp
old/cpp/: Visitor.cpp
source/: expression.cpp  parameter.cpp  parser.cpp  phantom.cpp  statement.cpp
source/include/: parser.hpp  (+3 more)
src/: Areas.cpp  Driver.cpp  Lexer.cpp  Logger.cpp  Parser.cpp  common.cpp  main.cpp  phantom.cpp
tests/: addition.ph  assignmen_conversion.ph  assignment_conversion.ph  casts.ph  multiple_additions.ph  multiplication.ph  substraction.ph
(+45 files in other folders)
